<resources>
    <string name="app_name">Sales Control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_version_text">App version:</string>

    <string name="menu_home">Home</string>
    <string name="menu_mystores">My stores</string>
    <string name="menu_myreports">My sent reports</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_synchro">Synchronisation</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>


    <!--    errors: -->
    <string name="storeexists">The store already exists!</string>


    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">Login is incorrect</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">The password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="close">Close</string>

    <!--    RAPORT -->
    <string name="report_opis_raportu">Description</string>
    <string name="report_ready_desc_zamowienie">Order</string>
    <string name="report_ready_desc_rozmowa_handlowa">Business conversation</string>
    <string name="report_ready_desc_merchandising">Merchandising</string>
    <string name="report_ready_desc_dostawa_towaru">Delivery</string>
    <string name="report_ready_desc__clean">Remove description</string>
    <string name="report_my_desc">My description:</string>
    <string name="report_comments">Comments:</string>
    <string name="report_photos_sent">number of photos uploaded:</string>
    <string name="report_nip_mail">The system will also send an email with the order to the warehouse address:</string>
    <string name="report_nip_not_mail">Due to the lack of a TIN(VAT), the system will not send an e-mail with the order to the address:</string>
    <string name="report_not_mail_warehouse">No email address for the selected Warehouse</string>
    <string name="report_desc_empty">The report description is blank\nWe only require it if you do not add an order</string>


    <string name="store_detail_bylesjuztu">You have already been here this month</string>
    <string name="store_detail_niebyles">You have not been here this month</string>

    <string name="order_number">Order number:</string>
    <string name="empty">Empty</string>

    <string name="warehouse">Warehouse</string>

    <string name="log_in">Log in</string>
    <string name="my_stores">My stores</string>
    <string name="add_store">Add store</string>
    <string name="my_sent_reports">My sent reports</string>
    <string name="sync">Synchro</string>
    <string name="unread_comments">Unread comments on reports</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_question">Are you sure you want to log out?</string>
    <string name="test_store">Test store</string>

    <string name="shortcut_order">O</string>
    <string name="shortcut_order_desc">- Order</string>
    <string name="shortcut_comment">C</string>
    <string name="shortcut_comment_desc">- Comments</string>
    <string name="shortcut_comment_unread">U</string>
    <string name="shortcut_comment_unread_desc">- Unread</string>

    <string name="report_add">Add report/order</string>
    <string name="report_show">Show reports</string>
    <string name="report_edit">Edit store</string>
    <string name="store_group">Store group</string>
    <string name="store_edit">Edit store</string>
    <string name="store_name">Name:</string>
    <string name="store_address">Address:</string>
    <string name="store_nip">TIN(VAT):</string>
    <string name="store_nip_req">The TIN(VAT) field is not required, but will be needed when creating a possible order</string>
    <string name="store_add">Add store</string>
    <string name="products_empty">No products added. \Please note that an order is not required</string>
    <string name="select_warehouse">Select warehouse</string>
    <string name="add_product">Add Product</string>
    <string name="product">Product:</string>
    <string name="count">Count:</string>
    <string name="count2">count:</string>

    <string name="camera">Camera</string>
    <string name="gallery">Photo gallery</string>

    <string name="comment_manager">Managers comment:</string>
    <string name="comment_add">Add comment</string>
    <string name="comment">Comment</string>
    <string name="add">Add</string>

    <string name="preview_desc">Description:</string>
    <string name="preview_photos">Photos:</string>
    <string name="preview_order">Order:</string>
    <string name="preview_mail">The system will also send an e-mail with the order to the appropriate address</string>
    <string name="preview_send">Send</string>
    <string name="preview_next">Next</string>

    <string name="sync_store">Stores</string>
    <string name="sync_last">Last sync:</string>
    <string name="sync_products">Products</string>
    <string name="sync_reports">Reports</string>
    <string name="sync_orders">Orders</string>
    <string name="sync_warehouses">Warehouses</string>
    <string name="sync_report_not_sync">Unsent reports</string>
    <string name="sync_comments_not_sync">Unsent comments</string>
    <string name="sync_all">Sync all</string>

    <string name="fill_field">Fill this field</string>
    <string name="store_added">Store added</string>
    <string name="wrong_user_or_password">Incorrect login or password</string>
    <string name="store_detail">Store detail</string>
    <string name="select_product">Select product</string>
    <string name="select_product_count">Select count</string>
    <string name="items">items:</string>
    <string name="capacity">capacity:</string>
    <string name="report_of_store">Reports of store:</string>
    <string name="report_preview">Report preview</string>

    <string name="adapter_report">Report</string>
    <string name="adapter_order">Order</string>
    <string name="adapter_photos">Photos</string>
    <string name="adapter_realization">Realization</string>

    <string name="date_since">data from:</string>
    <string name="error">error</string>

    <string name="comment_from_you">from you:</string>
    <string name="comment_from_manager">from Manager:</string>

    <string name="no_internet">No internet</string>
    <string name="comment_added">Comment added</string>
    <string name="comment_not_added">Comment has not been added! Saved in the memory</string>
    <string name="memory_saved">Saved in the phones memory!</string>
    <string name="internet_needed">This operation requires the Internet. Saved in memory</string>
    <string name="report_sent_ok">Report has been sent</string>
    <string name="report_not_added">Report has not been added. Saved in the memory</string>
    <string name="load_from_memory">No Internet. Reading reports from memory</string>

    <string name="creator_report">Report creator</string>
    <string name="creator_order">Order creator</string>
    <string name="unread_comments_shortcut">Unread comments</string>
    <string name="my_orders">My orders</string>
    <string name="store">Store</string>
    <string name="settings">Settings</string>

</resources>
