<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kostrzewa.cechini.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mystores"
        android:name="com.kostrzewa.cechini.ui.mystores.MyStoresFragment"
        android:label="@string/menu_mystores"
        tools:layout="@layout/fragment_mystores_list_item" />

    <fragment
        android:id="@+id/nav_mystores_detail"
        android:name="com.kostrzewa.cechini.ui.mystores.detail.MyStoreDetailFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_mystores_detail" />

    <fragment
        android:id="@+id/nav_myorders"
        android:name="com.kostrzewa.cechini.ui.order.myorders.MyOrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_myorders_list" />

    <fragment
        android:id="@+id/nav_synchro"
        android:name="com.kostrzewa.cechini.ui.share.ShareFragment"
        android:label="@string/menu_synchro"
        tools:layout="@layout/fragment_synchro" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.kostrzewa.cechini.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_report_create"
        android:name="com.kostrzewa.cechini.ui.report.ReportViewPagerFragment"
        android:label="@string/creator_report"
        tools:layout="@layout/fragment_report_create" />

    <fragment
        android:id="@+id/nav_order_create"
        android:name="com.kostrzewa.cechini.ui.order.CreateOrderFragment"
        android:label="@string/creator_order"
        tools:layout="@layout/fragment_order_create" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.kostrzewa.cechini.ui.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_myreports"
        android:name="com.kostrzewa.cechini.ui.report.myreports.MyReportsFragment"
        android:label="@string/my_sent_reports"
        tools:layout="@layout/fragment_myreports_list" />

    <fragment
        android:id="@+id/nav_unread_reports"
        android:name="com.kostrzewa.cechini.ui.report.myreports.MyReportsFragment"
        android:label="@string/unread_comments_shortcut"
        tools:layout="@layout/fragment_myreports_list"
        >
        <argument
            android:name="IS_UNREAD_REPORTS_FRAGMENT"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_myreportsOfStore"
        android:name="com.kostrzewa.cechini.ui.report.myreports.MyReportsFragment"
        android:label="@string/report_of_store"
        tools:layout="@layout/fragment_myreports_list" />
</navigation>