<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mystores"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_mystores" />
        <item
            android:id="@+id/nav_myreports"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_myreports" />
<!--        <item-->
<!--            android:id="@+id/nav_myorders"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="Moje zamówienia" />-->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
