<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_order_recyclerview"
        android:name="com.kostrzewa.cechini.ui.order.CreateOrderFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layoutManager="LinearLayoutManager"
        tools:context=".ui.order.CreateOrderFragment"
        tools:listitem="@layout/fragment_order_list_item" />

    <TextView
        android:id="@+id/fragment_order_recyclerview_emptyTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="200dp"
        android:layout_weight="1"
        android:text="@string/products_empty"
        android:textAlignment="center"
        android:textColor="@color/recycler_view_empty_text"
        android:textSize="25dp"
        android:visibility="gone">

    </TextView>

    <TextView
        android:id="@+id/fragment_order_numberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/order_number" />

    <TextView
        android:id="@+id/fragment_order_warehouseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/select_warehouse" />

    <Spinner
        android:id="@+id/fragment_order_warehouseSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/fragment_order_addProductBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/add_product"></Button>

</LinearLayout>
