<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview_desc"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/fragment_report_preview_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                tools:text="Opis: Testowy"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview_photos"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/fragment_report_preview_photoCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                tools:text="2"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview_order"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/fragment_report_preview_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                tools:text="brak"></TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/fragment_report_preview_mailInfoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:visibility="gone"
            android:text="@string/preview_mail"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"></TextView>

        <Button
            android:id="@+id/fragment_report_preview_sendBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/preview_send"
            android:textColor="@color/white"></Button>


        <ProgressBar
            android:id="@+id/fragment_report_previewProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"></ProgressBar>
    </LinearLayout>
</ScrollView>